fixed funky open corner that appeans on mobile scroll

--- a/src/scss/cagov/nav-mobile-controls.scss
+++ b/src/scss/cagov/nav-mobile-controls.scss
@@ -11,7 +11,7 @@ header {
     content: "";
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 100px);
     background-color: rgb(0 0 0 / 48%);
     top: 0;
     left: 0;
